salesforce/force-app/main/default/objects/CPQ_Discount_Tier__mdt/CPQ_Discount_Tier__mdt.object-meta.xml
<CustomObject>
    <description>Stores volume and term discount tiers used by the CPQ pricing engine. Rules are evaluated in quantity/term order and stacked additively.</description>
    <label>CPQ Discount Tier</label>
    <pluralLabel>CPQ Discount Tiers</pluralLabel>
</CustomObject>