salesforce/force-app/main/default/objects/CPQ_Discount_Tier__mdt/fields/ApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequired__c</fullName>
    <label>Approval Required</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <description>When true, any quote that triggers this discount tier will require approval before it can be sent to the customer.</description>
</CustomField>