salesforce/force-app/main/default/objects/CPQ_Discount_Tier__mdt/fields/DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercent__c</fullName>
    <label>Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Percentage discount to apply when this tier is matched. e.g., 10 = 10%.</description>
</CustomField>