salesforce/force-app/main/default/objects/CPQ_Discount_Tier__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
    <description>Inactive rules are excluded from all pricing engine queries.</description>
</CustomField>