salesforce/force-app/main/default/objects/CPQ_Discount_Tier__mdt/fields/MaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaxQuantity__c</fullName>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Inclusive upper bound for quantity (Volume rules) or term months (Term rules). Leave blank for no upper bound.</description>
</CustomField>