salesforce/force-app/main/default/objects/CPQ_Discount_Tier__mdt/fields/MinQuantity__c.field-meta.xml
<CustomField>
    <fullName>MinQuantity__c</fullName>
    <label>Min Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Inclusive lower bound for quantity (Volume rules) or term months (Term rules).</description>
</CustomField>