salesforce/force-app/main/default/objects/CPQ_Discount_Tier__mdt/fields/RuleType__c.field-meta.xml
<CustomField>
    <fullName>RuleType__c</fullName>
    <label>Rule Type</label>
    <length>50</length>
    <type>Text</type>
    <description>Determines when this rule is evaluated. Valid values: Volume, Term</description>
</CustomField>